--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,6 @@
-/*  your css code here. If applicable */
+.selector{
+	font-family: arial;
+	background-color:#eee;
+	font-size:20px;
+	color:#00f;
+}
